@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.983 2009-02-10 00:31:08 castaglia Exp $
+$Id: NEWS,v 1.984 2009-02-11 05:57:08 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -26,6 +26,8 @@ CVS
 - Bug 3156 - Allow resumed downloads when HiddenStore is in effect.
 - Bug 3170 - RewriteMap unescape URL encoding broken by RewriteCondition
   backreference handling.
+- Bug 2728 - Support for variables in ServerIdent directive.  The %L, %V,
+  and %v variables are now supported for ServerIdent identity strings.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
